--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
+    "@fontsource/dancing-script": "^5.2.6",
     "@fontsource/inter": "^5.2.5",
+    "@fontsource/playfair-display": "^5.2.6",
     "@jridgewell/trace-mapping": "^0.3.25",
     "@neondatabase/serverless": "^0.10.4",
     "@radix-ui/react-accordion": "^1.2.1",
